--- a/serverless.yml
+++ b/serverless.yml
@@ -22,10 +22,10 @@ package:
     - virtualenv/**
     - '!virtualenv/bin/activate_this.py'
     - '!virtualenv/lib/python3.7/site-packages/boto3/**'
-    - '!virtualenv/lib/python3.7/site-packages/botocore'
-    - '!virtualenv/lib/python3.7/site-packages/docutils'
-    - '!virtualenv/lib/python3.7/site-packages/jmespath'
-    - '!virtualenv/lib/python3.7/site-packages/python-dateuril'
-    - '!virtualenv/lib/python3.7/site-packages/s3transfer'
-    - '!virtualenv/lib/python3.7/site-packages/siz'
-    - '!virtualenv/lib/python3.7/site-packages/urllib3'
+    - '!virtualenv/lib/python3.7/site-packages/botocore/**'
+    - '!virtualenv/lib/python3.7/site-packages/docutils/**'
+    - '!virtualenv/lib/python3.7/site-packages/jmespath/**'
+    - '!virtualenv/lib/python3.7/site-packages/python-dateuril/**'
+    - '!virtualenv/lib/python3.7/site-packages/s3transfer/**'
+    - '!virtualenv/lib/python3.7/site-packages/siz/**'
+    - '!virtualenv/lib/python3.7/site-packages/urllib3/**'
